--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ django-static-fontawesome = "*"
 django = "*"
 pillow = "*"
 whitenoise = "==5.1.0"
-gunicorn = "*"
+gunicorn = "==19.9.0"
 
 [dev-packages]
 
